# the-best-goats

./: .gitignore  Cargo.toml  index.js  metadata.json
pkg/: package.json  the_best_goats.d.ts  the_best_goats.js  the_best_goats_bg.wasm
src/: extensions.rs  lib.rs  views.rs
src/templates/: base.rs  error.rs  favorites.rs  goat_list.rs  home.rs  mod.rs
