[package]
name = "the-best-goats"
version = "0.1.0"
authors = ["Jake Riesterer <jriesterer@cloudflare.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
cfg-if = "0.1.2"
cookie = "0.11.0"
futures = "0.1.25"
handlebars = { version = "1.0.5", features = ["no_dir_source"], default-features = false }
http = "0.1.13"
js-sys = "0.3.2"
lazy_static = "1.1.0"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.32"
time = "0.1.40"
url = "1.7.1"
wasm-bindgen = { version = "0.2.25", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.3.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3.2"
features = [
  'FetchEvent',
  'FormData',
  'Headers',
  'Request',
  'ResponseInit',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
